syntax = "proto3";
package tcp_msg; 

enum CmdType{
    START_UPDATE    = 0;
    FINISH_UPDATE   = 1;
}

message CommonHeader
{
    CmdType type    =   1;
}

message  StartUpdate
{ 
    CommonHeader    header  =   1;
}

message FinishUpdate
{
    CommonHeader    header  =   1;
}

message SendFile
{
    CommonHeader    header  =   1;
    
    enum FileType{
        SYSTEM = 0; //系统内部文件，比如lua文件，lua_ex_dlls文件
        TEMP = 1;   //临时文件，比如更新其他目录下的文件
    }
    FileType    type = 1;  // ID 
    string      filename = 2;  // server's ip ( tcp )
    bytes       content = 3;  //server's port ( tcp )
}


